syntax = "proto2";

package com.trueaccord.proto.e2e;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  collection_type: "scala.collection.immutable.Seq"
};

enum Enum {
  ONE = 1;
  TWO = 2;
}

message SubMsg {
}

// These get collection.immutable.Seq from the file-level definition.
message CollectionTypesMessage {
  repeated    int32 repeated_int32    = 31;
  repeated    int64 repeated_int64    = 32;
  repeated   uint32 repeated_uint32   = 33;
  repeated   uint64 repeated_uint64   = 34;
  repeated   sint32 repeated_sint32   = 35;
  repeated   sint64 repeated_sint64   = 36;
  repeated  fixed32 repeated_fixed32  = 37;
  repeated  fixed64 repeated_fixed64  = 38;
  repeated sfixed32 repeated_sfixed32 = 39;
  repeated sfixed64 repeated_sfixed64 = 40;
  repeated    float repeated_float    = 41;
  repeated   double repeated_double   = 42;
  repeated     bool repeated_bool     = 43;
  repeated   string repeated_string   = 44;
  repeated    bytes repeated_bytes    = 45;
  repeated     Enum repeated_enum     = 46;
  repeated   SubMsg repeated_msg      = 47;
}

message CollectionTypesVector {
  repeated    int32 repeated_int32    = 31 [(scalapb.field).collection_type="Vector"];
  repeated    int64 repeated_int64    = 32 [(scalapb.field).collection_type="Vector"];
  repeated   uint32 repeated_uint32   = 33 [(scalapb.field).collection_type="Vector"];
  repeated   uint64 repeated_uint64   = 34 [(scalapb.field).collection_type="Vector"];
  repeated   sint32 repeated_sint32   = 35 [(scalapb.field).collection_type="Vector"];
  repeated   sint64 repeated_sint64   = 36 [(scalapb.field).collection_type="Vector"];
  repeated  fixed32 repeated_fixed32  = 37 [(scalapb.field).collection_type="Vector"];
  repeated  fixed64 repeated_fixed64  = 38 [(scalapb.field).collection_type="Vector"];
  repeated sfixed32 repeated_sfixed32 = 39 [(scalapb.field).collection_type="Vector"];
  repeated sfixed64 repeated_sfixed64 = 40 [(scalapb.field).collection_type="Vector"];
  repeated    float repeated_float    = 41 [(scalapb.field).collection_type="Vector"];
  repeated   double repeated_double   = 42 [(scalapb.field).collection_type="Vector"];
  repeated     bool repeated_bool     = 43 [(scalapb.field).collection_type="Vector"];
  repeated   string repeated_string   = 44 [(scalapb.field).collection_type="Vector"];
  repeated    bytes repeated_bytes    = 45 [(scalapb.field).collection_type="Vector"];
  repeated     Enum repeated_enum     = 46 [(scalapb.field).collection_type="Vector"];
  repeated   SubMsg repeated_msg      = 47 [(scalapb.field).collection_type="Vector"];
}

message CollectionTypesList {
  repeated    int32 repeated_int32    = 31 [(scalapb.field).collection_type="List"];
  repeated    int64 repeated_int64    = 32 [(scalapb.field).collection_type="List"];
  repeated   uint32 repeated_uint32   = 33 [(scalapb.field).collection_type="List"];
  repeated   uint64 repeated_uint64   = 34 [(scalapb.field).collection_type="List"];
  repeated   sint32 repeated_sint32   = 35 [(scalapb.field).collection_type="List"];
  repeated   sint64 repeated_sint64   = 36 [(scalapb.field).collection_type="List"];
  repeated  fixed32 repeated_fixed32  = 37 [(scalapb.field).collection_type="List"];
  repeated  fixed64 repeated_fixed64  = 38 [(scalapb.field).collection_type="List"];
  repeated sfixed32 repeated_sfixed32 = 39 [(scalapb.field).collection_type="List"];
  repeated sfixed64 repeated_sfixed64 = 40 [(scalapb.field).collection_type="List"];
  repeated    float repeated_float    = 41 [(scalapb.field).collection_type="List"];
  repeated   double repeated_double   = 42 [(scalapb.field).collection_type="List"];
  repeated     bool repeated_bool     = 43 [(scalapb.field).collection_type="List"];
  repeated   string repeated_string   = 44 [(scalapb.field).collection_type="List"];
  repeated    bytes repeated_bytes    = 45 [(scalapb.field).collection_type="List"];
  repeated     Enum repeated_enum     = 46 [(scalapb.field).collection_type="List"];
  repeated   SubMsg repeated_msg      = 47 [(scalapb.field).collection_type="List"];
}

message CollectionTypesSet {
  repeated    int32 repeated_int32    = 31 [(scalapb.field).collection_type="Set"];
  repeated    int64 repeated_int64    = 32 [(scalapb.field).collection_type="Set"];
  repeated   uint32 repeated_uint32   = 33 [(scalapb.field).collection_type="Set"];
  repeated   uint64 repeated_uint64   = 34 [(scalapb.field).collection_type="Set"];
  repeated   sint32 repeated_sint32   = 35 [(scalapb.field).collection_type="Set"];
  repeated   sint64 repeated_sint64   = 36 [(scalapb.field).collection_type="Set"];
  repeated  fixed32 repeated_fixed32  = 37 [(scalapb.field).collection_type="Set"];
  repeated  fixed64 repeated_fixed64  = 38 [(scalapb.field).collection_type="Set"];
  repeated sfixed32 repeated_sfixed32 = 39 [(scalapb.field).collection_type="Set"];
  repeated sfixed64 repeated_sfixed64 = 40 [(scalapb.field).collection_type="Set"];
  repeated    float repeated_float    = 41 [(scalapb.field).collection_type="Set"];
  repeated   double repeated_double   = 42 [(scalapb.field).collection_type="Set"];
  repeated     bool repeated_bool     = 43 [(scalapb.field).collection_type="Set"];
  repeated   string repeated_string   = 44 [(scalapb.field).collection_type="Set"];
  repeated    bytes repeated_bytes    = 45 [(scalapb.field).collection_type="Set"];
  repeated     Enum repeated_enum     = 46 [(scalapb.field).collection_type="Set"];
  repeated   SubMsg repeated_msg      = 47 [(scalapb.field).collection_type="Set"];
}

message CollectionTypesPackedVector {
  repeated    int32 repeated_int32    = 31 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated    int64 repeated_int64    = 32 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated   uint32 repeated_uint32   = 33 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated   uint64 repeated_uint64   = 34 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated   sint32 repeated_sint32   = 35 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated   sint64 repeated_sint64   = 36 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated  fixed32 repeated_fixed32  = 37 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated  fixed64 repeated_fixed64  = 38 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated sfixed32 repeated_sfixed32 = 39 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated sfixed64 repeated_sfixed64 = 40 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated    float repeated_float    = 41 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated   double repeated_double   = 42 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated     bool repeated_bool     = 43 [packed=true, (scalapb.field).collection_type="Vector"];
  repeated     Enum repeated_enum     = 46 [packed=true, (scalapb.field).collection_type="Vector"];
}

message CollectionTypesPackedSet {
  repeated    int32 repeated_int32    = 31 [packed=true, (scalapb.field).collection_type="Set"];
  repeated    int64 repeated_int64    = 32 [packed=true, (scalapb.field).collection_type="Set"];
  repeated   uint32 repeated_uint32   = 33 [packed=true, (scalapb.field).collection_type="Set"];
  repeated   uint64 repeated_uint64   = 34 [packed=true, (scalapb.field).collection_type="Set"];
  repeated   sint32 repeated_sint32   = 35 [packed=true, (scalapb.field).collection_type="Set"];
  repeated   sint64 repeated_sint64   = 36 [packed=true, (scalapb.field).collection_type="Set"];
  repeated  fixed32 repeated_fixed32  = 37 [packed=true, (scalapb.field).collection_type="Set"];
  repeated  fixed64 repeated_fixed64  = 38 [packed=true, (scalapb.field).collection_type="Set"];
  repeated sfixed32 repeated_sfixed32 = 39 [packed=true, (scalapb.field).collection_type="Set"];
  repeated sfixed64 repeated_sfixed64 = 40 [packed=true, (scalapb.field).collection_type="Set"];
  repeated    float repeated_float    = 41 [packed=true, (scalapb.field).collection_type="Set"];
  repeated   double repeated_double   = 42 [packed=true, (scalapb.field).collection_type="Set"];
  repeated     bool repeated_bool     = 43 [packed=true, (scalapb.field).collection_type="Set"];
  repeated     Enum repeated_enum     = 46 [packed=true, (scalapb.field).collection_type="Set"];
}

message CustomCollection {
  repeated int32 repeated_int32 = 31 [(scalapb.field).collection_type="com.trueaccord.pb.MyVector"];
}
